<resources>
    <string name="app_name">BoB</string>
    <string name="title_map">Map</string>
    <string name="title_imageprocessor">Image Processor</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">User Profile</string>

    <string name="username_password_empty">Username or Password is empty</string>
    <string name="tfa_empty">TFA Code is empty.</string>
    <string name="no_login_token">No login token found. Please try again.</string>
    <string name="profile_welcome_message">Welcome, %1$s!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="enter_tfa_code">Enter TFA Code</string>
    <string name="verify">Verify</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="fill_all_fields">Please fill all fields.</string>
    <string name="passwords_do_not_match">Entered passwords do not match.</string>
    <string name="registration_successful">Registration successful. You can login!</string>
    <string name="image_processor">Image Processor</string>
    <string name="load_image_from_device">Load Image from Device</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="submit">Submit</string>
    <string name="please_login_to_use_this_function">Please login to use this function</string>
    <string name="no_image_selected">No image selected</string>
    <string name="image_processor_top_text">Choose or take an image to send for processing.\nSelect train and enter your wagon number.</string>
    <string name="enter_wagon_number">Enter wagon number.</string>
    <string name="extreme">Extreme</string>
    <string name="misc">Misc</string>
    <string name="new_t">New</string>
    <string name="title_new_message">New Message</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send">Send</string>
    <string name="extreme_event_notification">Extreme event notification</string>
    <string name="automatic_data_capture">Automatic data capture</string>
    <string name="automatic_data_capture_stop">Stop Automatic data capture</string>
    <string name="automatic_data_capture_start">Start Automatic data capture</string>
    <string name="your_occupancy_estimate">Your occupancy estimate:</string>
    <string name="pick_location">Pick location</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="percentage_of_wagon_occupied">Percentage of wagon occupied:</string>
    <string name="number_of_seats_on_wagon">Number of seats on wagon:</string>
    <string name="number_of_detected_people">Number of detected people:</string>
    <string name="choose_actual_occupancy_percentage_to_the_best_of_your_abilities_and_submit_data_to_save_in_database_ncurrent_location_will_be_saved">Choose actual occupancy percentage to the best of your abilities and submit data to save in database.\nCurrent location will be saved.</string>
    <string name="wagon">Wagon</string>
    <string name="route">Route</string>
</resources>