<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="si.bob.zpmobileapp.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_imageprocessor"
        android:name="si.bob.zpmobileapp.ui.imageprocessor.ImageProcessorFragment"
        android:label="@string/title_imageprocessor"
        tools:layout="@layout/fragment_imageprocessor" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="si.bob.zpmobileapp.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages">
        <!-- Action from MessagesFragment to NewMessageFragment -->
        <action
            android:id="@+id/action_navigation_messages_to_newMessageFragment"
            app:destination="@id/navigation_new_message" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="si.bob.zpmobileapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_new_message"
        android:name="si.bob.zpmobileapp.ui.messages.NewMessageFragment"
        android:label="@string/title_new_message"
        tools:layout="@layout/fragment_new_message" />
</navigation>